Added "activateAccount" and "get..." methods and modified "deactivateAccount" and "get..." methods